Process metrics